# Search_of_work

./: README.md  main.py  pyproject.toml
data/: sample.json
data/JSON/: Favourites.json
src/: currency_converters.py  errors.py  json_handlers.py  rates.py  salary.py  services_api.py  services_file.py  utils.py  vacancies.py
tests/: test_currency_converters.py  test_json_handlers.py  test_salary.py  test_services_api.py  test_vacancies.py
